kubernetes/monitoring/allow-prometheus-egress-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-egress-kube-state-metrics
  namespace: fds
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-api
          podSelector:
            matchLabels:
              app: kube-state-metrics
      ports:
        - protocol: TCP
          port: 8080
